--- a/frontend/src/app/karrier/karrier.component.html
+++ b/frontend/src/app/karrier/karrier.component.html
@@ -14,21 +14,21 @@
                         <a routerLink="/fooldal-component" class="btn btn-secondary btn-lg btn-block" routerLinkActive="active">FŐMENÜ</a>
                     </li>
                     <li>
-                        <a href="regist_kuczi_daniel/regist.html" target="_blank"
+                        <a routerLink="/regisztracio-component" routerLinkActive="active"
                             class="btn btn-secondary btn-lg btn-block">REGISZTRÁCIÓ</a>
                     </li>
                     <li>
                         <a href="" target="_blank" class="btn btn-secondary btn-lg btn-block">ÁRTÁBLÁZAT</a>
                     </li>
                     <li>
-                        <a class="btn btn-secondary btn-lg btn-block" href="login.html" target="_blank">BELÉPÉS</a>
+                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/bejelentkezes-component" routerLinkActive="active">BELÉPÉS</a>
                     </li>
                 </ul>
             </nav>
         
         
             <div class="middle">
-                <a><img src="../../assets/images/1.jpg" alt="5. kép"></a>
+                <a><img src="../../assets/images/6.jpg" alt="5. kép"></a>
                 <h2>Vedd fel velünk a kapcsolatot:</h2>
                 <table>
                     <tr class="tr tr1">
