--- a/frontend/src/app/berlet/berlet.component.css
+++ b/frontend/src/app/berlet/berlet.component.css
@@ -97,38 +97,42 @@ h3{
     letter-spacing: 0.5px;
 }
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none;
+    position: fixed;
+    z-index: 2;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    
 }
 .modal-content {
-    background-color: #fefefe;
+    display: grid;
+    border-radius: 0;
+    border-width: 0;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: fit-content; /* Could be more or less, depending on screen size */
+    grid-template-columns: repeat(1 , 200px);
+    grid-template-rows: repeat(5, auto);
+    
+    grid-template-areas: 
+    "profile-cross"
+    "profile-picture"
+    "profile-username"
+    "email-adress"
+    "rank"
+    "notifications";
 }
-  
-  /* The Close Button */
 .close {
-    color: #aaa;
-    float: right;
+    color: #ff5353;
+    text-align: right;
     font-size: 28px;
     font-weight: bold;
-}
-  
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+    grid-area: profile-cross;
 }
 nav {
     width: 150px;
@@ -149,6 +153,11 @@ nav ul li {
     background-color: black;
     color: rgb(255, 255, 255);
     font-size: 1.5rem;
+}
+.btn-rendel{
+    text-align: left;
+    font-size: 1rem;
+    width: 150px;
 }
 footer {
     height: 50px;
