--- a/frontend/src/app/bufe/bufe.component.html
+++ b/frontend/src/app/bufe/bufe.component.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li>
-                    <a routerLink="/fooldal-component" target="_blank" class="btn btn-secondary btn-lg btn-block" routerLinkActive="active">FŐMENÜ</a>
+                    <a routerLink="/fooldal-component" class="btn btn-secondary btn-lg btn-block" routerLinkActive="active">FŐMENÜ</a>
                 </li>
                 <li>
                     <a routerLink="/regisztracio-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">REGISZTRÁCIÓ</a>
