--- a/frontend/src/app/edzo/edzo.component.html
+++ b/frontend/src/app/edzo/edzo.component.html
@@ -13,10 +13,10 @@
                     <a routerLink="/fooldal-component" class="btn btn-secondary btn-lg btn-block" routerLinkActive="active">FŐMENÜ</a>
                 </li>
                 <li>
-                    <a href="regist_kuczi_daniel/regist.html" target="_blank" class="btn btn-secondary btn-lg btn-block">REGISZTRÁCIÓ</a>
+                    <a routerLink="/regisztracio-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">REGISZTRÁCIÓ</a>
                 </li>
                 <li>
-                    <a class="btn btn-secondary btn-lg btn-block" href="login.html" target="_blank">BELÉPÉS</a>
+                    <a class="btn btn-secondary btn-lg btn-block" routerLink="/bejelentkezes-component" routerLinkActive="active">BELÉPÉS</a>
                 </li>
             </ul>
         </nav>
@@ -25,37 +25,22 @@
             <p>Személyi edzőink tapasztaltak és segítőkészek. Ha nálunk jársz, ne habozz kikérni véleményüket tanácsaikat!
             </p>
             <table id="table">
-                <tr class="tr1">
-                   <th>Vezetéknév</th>
-                   <th>Keresztnév</th>
-                   <th>Tel.:</th>
-                   <th>E-mail</th>
-                </tr>
-                <tr class="tr2">
-                   <td *ngFor="let edzo of edzok">{{edzo.edzo_vezeteknev}}</td>
-                   <td ></td>
-                   <td>ffi</td>
-                   <td>kokszjani@gmail.com</td>
-                </tr>
-                <tr class="tr1">
-                   <td>Kreatin pezsgőtab.</td>
-                   <td></td>
-                   <td>1200 Ft</td>
-                   <td>72 g/18 db</td>
-                </tr>
-                <tr class="tr2">
-                   <td>Kollagén italpor</td>
-                   <td></td>
-                   <td>7000 Ft</td>
-                   <td>500 g</td>
-                </tr>
-                <tr class="tr1">
-                   <td>Fehérjepor</td>
-                   <td></td>
-                   <td>4000 Ft</td>
-                   <td>300 g</td>
-                </tr>
-                
+                <thead>
+                    <tr class="tr1">
+                        <th>Vezetéknév</th>
+                        <th>Keresztnév</th>
+                        <th>Tel.:</th>
+                        <th>E-mail</th>
+                     </tr>
+                </thead>
+                <tbody>
+                <tr class="tr2" *ngFor="let edzo of edzok">
+                    <td>{{edzo.szemedz_vezeteknev}}</td>
+                    <td>{{edzo.szemedz_keresztnev}}</td>
+                    <td>{{edzo.szemedz_telefon}}</td>
+                    <td>{{edzo.szemedz_email}}</td>
+                 </tr>
+                </tbody>
             </table>
         </div>
     </div>
