--- a/frontend/src/app/felszereles/felszereles.component.html
+++ b/frontend/src/app/felszereles/felszereles.component.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li>
-                    <a routerLink="/fooldal-component" target="_blank" class="btn btn-secondary btn-lg btn-block" routerLinkActive="active">FŐMENÜ</a>
+                    <a routerLink="/fooldal-component" class="btn btn-secondary btn-lg btn-block" routerLinkActive="active">FŐMENÜ</a>
                 </li>
                 <li>
                     <a routerLink="/regisztracio-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">REGISZTRÁCIÓ</a>
@@ -25,7 +25,7 @@
             </ul>
         </nav>
         <div class="middle">
-            <a  ><img  src="../../assets/images/4.jpg" alt="4. kép"></a>
+            <a  ><img  src="../../assets/images/3.jpg" alt="4. kép"></a>
             <p>Edzőtermünk jól felszerelt, nálunk megtalálod amire szükséged van, illetve ami a legjobban passzol edzéseidhez.
                 Gyere és nézz be hozzánk, az első alkalom ingyenes!
             </p>
