--- a/frontend/src/app/termek/termek.component.css
+++ b/frontend/src/app/termek/termek.component.css
@@ -119,6 +119,11 @@ nav ul li {
     color: rgb(255, 255, 255);
     font-size: 1.5rem;
 }
+.btn-rendel{
+    text-align: left;
+    font-size: 1rem;
+    width: 150px;
+}
 #rendeles{
     width: 100px;
     margin-bottom: 15px;
