--- a/frontend/src/app/karrier/karrier.component.html
+++ b/frontend/src/app/karrier/karrier.component.html
@@ -11,17 +11,28 @@
             <nav>
                 <ul>
                     <li>
-                        <a routerLink="/fooldal-component" class="btn btn-secondary btn-lg btn-block" routerLinkActive="active">FŐMENÜ</a>
+                        <a routerLink="/fooldal-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">FŐMENÜ</a>
                     </li>
                     <li>
-                        <a routerLink="/regisztracio-component" routerLinkActive="active"
-                            class="btn btn-secondary btn-lg btn-block">REGISZTRÁCIÓ</a>
-                    </li>
-                    <li>
-                        <a href="" target="_blank" class="btn btn-secondary btn-lg btn-block">ÁRTÁBLÁZAT</a>
+                        <a routerLink="/regisztracio-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">REGISZTRÁCIÓ</a>
                     </li>
                     <li>
                         <a class="btn btn-secondary btn-lg btn-block" routerLink="/bejelentkezes-component" routerLinkActive="active">BELÉPÉS</a>
+                    </li>
+                    <li>
+                        <a routerLink="/berlet-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">BÉRLET</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/edzo-component" routerLinkActive="active">EDZŐK</a>
+                    </li>
+                    <li>
+                        <a routerLink="/felszereles-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">FELSZERELÉS</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/bufe-component" routerLinkActive="active">BÜFÉ</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/TERMEK-component" routerLinkActive="active">TERMÉKEK</a>
                     </li>
                 </ul>
             </nav>
