--- a/frontend/src/app/berlet/berlet.component.html
+++ b/frontend/src/app/berlet/berlet.component.html
@@ -17,10 +17,22 @@
                         <a routerLink="/regisztracio-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">REGISZTRÁCIÓ</a>
                     </li>
                     <li>
-                        <a href="" target="_blank" class="btn btn-secondary btn-lg btn-block">ÁRTÁBLÁZAT</a>
+                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/bejelentkezes-component" routerLinkActive="active">BELÉPÉS</a>
                     </li>
                     <li>
-                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/bejelentkezes-component" routerLinkActive="active">BELÉPÉS</a>
+                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/edzo-component" routerLinkActive="active">EDZŐK</a>
+                    </li>
+                    <li>
+                        <a routerLink="/felszereles-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">FELSZERELÉS</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/bufe-component" routerLinkActive="active">BÜFÉ</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/termek-component" routerLinkActive="active">TERMÉKEK</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/karrier-component" routerLinkActive="active">KARRIER</a>
                     </li>
                 </ul>
             </nav>
@@ -48,7 +60,7 @@
                             <label >Szállítási cím</label>
                             <input type="text" class="form-control" id="szall-cim">
                         </div>
-                        <div class="btn btn-secondary btn-block" onclick="document.getElementById('myModal').style.display='none'">Megrendelem</div>
+                        <div class="btn btn-secondary btn-block" onclick="document.getElementById('myModal').style.display='none';let input = document.getElementById('mennyiseg').value;alert(input) ">Megrendelem</div>
                     </div>
                     
                 </div>
