--- a/frontend/src/app/felszereles/felszereles.component.html
+++ b/frontend/src/app/felszereles/felszereles.component.html
@@ -10,18 +10,32 @@
     <div id="article">
         <nav>
             <ul>
-                <li>
-                    <a routerLink="/fooldal-component" class="btn btn-secondary btn-lg btn-block" routerLinkActive="active">FŐMENÜ</a>
-                </li>
-                <li>
-                    <a routerLink="/regisztracio-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">REGISZTRÁCIÓ</a>
-                </li>
-                <li>
-                    <a routerLink="" target="_blank" class="btn btn-secondary btn-lg btn-block">ÁRTÁBLÁZAT</a>
-                </li>
-                <li>
-                    <a class="btn btn-secondary btn-lg btn-block" routerLink="/bejelentkezes-component" routerLinkActive="active">BELÉPÉS</a>
-                </li>
+                <ul>
+                    <li>
+                        <a routerLink="/fooldal-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">FŐMENÜ</a>
+                    </li>
+                    <li>
+                        <a routerLink="/regisztracio-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">REGISZTRÁCIÓ</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/bejelentkezes-component" routerLinkActive="active">BELÉPÉS</a>
+                    </li>
+                    <li>
+                        <a routerLink="/berlet-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">BÉRLET</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/edzo-component" routerLinkActive="active">EDZŐK</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/bufe-component" routerLinkActive="active">BÜFÉ</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/termek-component" routerLinkActive="active">TERMÉKEK</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/karrier-component" routerLinkActive="active">KARRIER</a>
+                    </li>
+                </ul>
             </ul>
         </nav>
         <div class="middle">
