--- a/frontend/src/app/regisztracio/regisztracio.component.html
+++ b/frontend/src/app/regisztracio/regisztracio.component.html
@@ -14,44 +14,65 @@
                         <a routerLink="/fooldal-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">FŐMENÜ</a>
                     </li>
                     <li>
-                        <a href="" target="_blank" class="btn btn-secondary btn-lg btn-block">ÁRTÁBLÁZAT</a>
+                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/bejelentkezes-component" routerLinkActive="active">BELÉPÉS</a>
                     </li>
                     <li>
-                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/bejelentkezes-component" routerLinkActive="active">BELÉPÉS</a>
+                        <a routerLink="/berlet-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">BÉRLET</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/edzo-component" routerLinkActive="active">EDZŐK</a>
+                    </li>
+                    <li>
+                        <a routerLink="/felszereles-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">FELSZERELÉS</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/bufe-component" routerLinkActive="active">BÜFÉ</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/termek-component" routerLinkActive="active">TERMÉKEK</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/karrier-component" routerLinkActive="active">KARRIER</a>
                     </li>
                 </ul>
             </nav>
         
         
             <div class="middle">
-                <div class="regisztracio-form">
+                
+                <form #addForm="ngForm" (ngSubmit)="onAddFelhasznalo(addForm)">
+
+
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Felhasználónév</label>
-                        <input type="text" class="form-control" id="exampleInputText">
-                        <small id="emailHelp" class="form-text text-muted" style="display: none;">ngFor felhasználónév foglalt e</small>
+                       <label for="name">Felhasznalonev</label>
+                       <input type="text" ngModel name="felhasznalonev" class="form-control" id="felhasznalonev" placeholder="Name" required>
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Vezetéknév</label>
-                        <input type="text" class="form-control" id="exampleInputText">
+                        <label for="password">Jelszó</label>
+                        <input type="password" ngModel name="jelszo" class="form-control" id="jelszo" placeholder="Jelszó" required>
+                     </div>
+                    <div class="form-group">
+                       <label for="vezeteknev">Vezetéknév</label>
+                       <input type="text" ngModel name="felh_vezeteknev" class="form-control" id="felh_vezeteknev" placeholder="Vezeteknev" required>
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Keresztnév</label>
-                        <input type="text" class="form-control" id="exampleInputText">
-                    </div>
-                    
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">E-mail cím</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                       <label for="phone">Keresztnév</label>
+                       <input type="text" ngModel name="felh_keresztnev" class="form-control" id="felh_keresztnev" placeholder="Keresztnev" required>
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Jelszó</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1">
+                       <label for="birthday">Születési dátum</label>
+                       <input type="date" ngModel name="szuletesi_datum" class="form-control" id="szuletesi_datum" placeholder="SzuletesiDatum" required>
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Telefonszám</label>
-                        <input type="tel" class="form-control" id="exampleInputText">
+                       <label for="email">Email</label>
+                       <input type="email" ngModel name="felh_email" class="form-control" id="felh_email" placeholder="Email" required>
                     </div>
-                </div>
+                    <div class="form-group">
+                       <label for="phone">Telefon</label>
+                       <input type="text" ngModel name="felh_telefon" class="form-control" id="felh_telefon" placeholder="Telefon" required>
+                    </div>
+                    <button [disabled]="addForm.invalid" type="submit" class="btn btn-secondary btn-regisztracio">Regisztrálok</button>
+                </form>
             </div>
             
         </div>
