--- a/frontend/src/app/termek/termek.component.html
+++ b/frontend/src/app/termek/termek.component.html
@@ -18,10 +18,22 @@
                     <a routerLink="/regisztracio-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">REGISZTRÁCIÓ</a>
                 </li>
                 <li>
-                    <a href="" target="_blank" class="btn btn-secondary btn-lg btn-block">ÁRTÁBLÁZAT</a>
+                    <a class="btn btn-secondary btn-lg btn-block" routerLink="/bejelentkezes-component" routerLinkActive="active">BELÉPÉS</a>
                 </li>
                 <li>
-                    <a class="btn btn-secondary btn-lg btn-block" routerLink="/bejelentkezes-component" routerLinkActive="active">BELÉPÉS</a>
+                    <a routerLink="/berlet-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">BÉRLET</a>
+                </li>
+                <li>
+                    <a class="btn btn-secondary btn-lg btn-block" routerLink="/edzo-component" routerLinkActive="active">EDZŐK</a>
+                </li>
+                <li>
+                    <a routerLink="/felszereles-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">FELSZERELÉS</a>
+                </li>
+                <li>
+                    <a class="btn btn-secondary btn-lg btn-block" routerLink="/bufe-component" routerLinkActive="active">BÜFÉ</a>
+                </li>
+                <li>
+                    <a class="btn btn-secondary btn-lg btn-block" routerLink="/karrier-component" routerLinkActive="active">KARRIER</a>
                 </li>
             </ul>
         </nav>
@@ -35,12 +47,14 @@
                    <th>Megnevezés</th>
                    <th>Ár</th>
                    <th>készlet</th>
+                   <th style="display: none;">id</th>
                 </tr>
                 <tr class="tr2" *ngFor="let termek of termekek">
                 
                     <td class="btn btn-rendel" onclick="document.getElementById('myModal').style.display='block'" id="rendel">{{termek.termek_nev}}</td>
-                    <td>{{termek.ar}} Ft</td>
+                    <td id="ar">{{termek.ar}} Ft</td>
                     <td>{{termek.keszlet}} cs</td>
+                    <td id="termekid" style="display: none;">{{termek.termekid}}</td>
                 
                 </tr>
                 
@@ -51,7 +65,11 @@
                             <label for="exampleInputPassword1">Mennyiség</label>
                             <input type="number" class="form-control" id="mennyiseg">
                         </div>
-                        <div class="btn btn-secondary btn-block" onclick="document.getElementById('myModal').style.display='none'">Megrendelem</div>
+                        <div class="btn btn-secondary btn-block" onclick="document.getElementById('myModal').style.display='none';
+                        let ar = document.getElementById('ar');
+                        let termekid = document.getElementById('termekid');
+                        let input = document.getElementById('mennyiseg').value;
+                        alert(termekid);">Megrendelem</div>
                     </div>
                     
                 </div>
@@ -64,3 +82,8 @@
         <p>© Kovácsfi Alex/Kovács Richárd/Kuczi Dániel</p>
     </footer>
 </div>
+<script >
+    function vasarlas(){
+        
+    }
+</script>
