--- a/frontend/src/app/berlet/berlet.component.html
+++ b/frontend/src/app/berlet/berlet.component.html
@@ -1,11 +1,11 @@
-
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
     <div id="container">
         <header>
             <h3>Land of Fitness Gym</h3>
             <img class="logo" src="../../assets/images/final_logo.svg" alt="logo">
-            <div class="bg"></div>
-            <div class="bg bg2"></div>
-            <div class="bg bg3"></div>
+            
         </header>
         <div id="article">
             <nav>
@@ -39,7 +39,7 @@
         
         
             <div class="middle">
-                <a><img src="../../assets/images/1.jpg" alt="5. kép"></a>
+                <a><img class="kep" src="../../assets/images/1.jpg" alt="5. kép"></a>
                 <p>Ideje az életmódváltásnak! Az első alkalom ingyenes utána 1500 ft/nap. Havi bérletünk 5000 ft. Vágj bele!
                 </p>
                 <table id="table">
