--- a/frontend/src/app/berlet/berlet.component.css
+++ b/frontend/src/app/berlet/berlet.component.css
@@ -5,7 +5,6 @@ body {
 }
 header{
     height: 50px;
-    padding: 10px;
     font-family: 'Bebas Neue',sans-serif;
     text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
     background-image:linear-gradient(to top ,#000000, #000000, rgba(255, 255, 255, 0));
@@ -168,4 +167,60 @@ footer {
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     grid-area: footer;
+}
+@media (max-width: 1000px){
+    #container{
+        width: 600px;
+
+    }
+    .middle{
+        align-items: center;
+        justify-items: top;
+    }
+    .kep{
+        margin-top: 5px;
+        width: 400px;
+    }
+}
+@media (max-width: 650px){
+    #container{
+        width: 300px;
+        margin: 75px;
+        align-content: center;
+    }
+    nav{
+        width: 110px;
+        font-weight: 200;
+    }
+    .kep{
+        margin-right: 15px;
+        width: 300px;
+    }
+    .btn.btn-secondary{
+        font-size: 15px;
+        font-weight: 200;
+    }
+    .form-group{
+        width: 150px;
+        align-self: left;
+        align-items: left;
+        margin-right: 15px;
+    }
+}
+@media (max-width:500px){
+    #container{
+        width: 200px;
+        margin: 50px;
+    }
+    .kep{
+        width: 180px;
+    }
+    table{
+        width: 100px;
+    }
+}
+@media (max-width:400px){
+    #container{
+        margin: 25px;
+    }
 }
