--- a/frontend/src/app/bufe/bufe.component.css
+++ b/frontend/src/app/bufe/bufe.component.css
@@ -100,39 +100,46 @@ h3{
     background-color: #8d8d8d;
     letter-spacing: 0.5px;
 }
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+.tableModal {
+    display: none;
+    position: fixed;
+    z-index: 2;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
 }
-.modal-content {
-    background-color: #fefefe;
+.tableModalContent {
+    
+    display: grid;
+    width: 350px;
+    border-radius: 0;
+    border-width: 0;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: fit-content; /* Could be more or less, depending on screen size */
+    grid-template-columns: repeat(1 , 200px);
+    grid-template-rows: repeat(5, auto);
+    
+    grid-template-areas: 
+    "profile-cross"
+    "profile-picture"
+    "profile-username"
+    "email-adress"
+    "rank"
+    "notifications";
 }
-  
-  /* The Close Button */
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+#modalTable{
+    display: none;
+    background-color: #fefefe;
+    width: 350px;
 }
-  
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+.close{
+    color: red;
+    font-size: 3rem;
 }
 nav {
     width: 150px;
@@ -145,6 +152,7 @@ nav ul {
     
     
 }
+
 nav ul li {    
     padding-top: 20px;
     padding-bottom: 20px;
@@ -153,6 +161,9 @@ nav ul li {
     background-color: black;
     color: rgb(255, 255, 255);
     font-size: 1.5rem;
+}
+.btn-table-call{
+    display: none;
 }
 footer {
     height: 50px;
@@ -163,4 +174,75 @@ footer {
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     grid-area: footer;
+}
+@media (max-width: 1000px){
+    #container{
+        width: 600px;
+
+    }
+    .middle{
+        align-items: center;
+        justify-items: top;
+    }
+    img{
+        margin-top: 5px;
+        width: 400px;
+    }
+    .tr2{
+        border-bottom: 1px solid #000;
+    }
+}
+@media (max-width: 650px){
+    #container{
+        width: 300px;
+        margin: 75px;
+        align-content: center;
+    }
+    nav{
+        width: 110px;
+        font-weight: 200;
+    }
+    img{
+        margin-right: 15px;
+        width: 300px;
+    }
+    .btn.btn-secondary{
+        font-size: 15px;
+        font-weight: 200;
+    }
+    #modalTable{
+        display: none;
+    }
+    table{
+        font-size: 15px;
+    }
+}
+@media (max-width:500px){
+    #container{
+        width: 200px;
+        margin: 50px;
+    }
+    img{
+        width: 180px;
+    }
+    .btn-table-call{
+        display: block;
+        margin-bottom: 10px;
+        width: 150px;
+    }
+    p{
+        width: 150px;
+        text-align: center;
+    }
+    #table{
+        display: none;
+    }
+    footer{
+        font-size: 12px;
+    }
+}
+@media (max-width:400px){
+    #container{
+        margin: 25px;
+    }
 }
