--- a/frontend/src/app/bufe/bufe.component.html
+++ b/frontend/src/app/bufe/bufe.component.html
@@ -30,6 +30,120 @@
                 Shake-eink megadhatják a löketet az utolsó sorozathoz. Popeye-nek a spenót, Bud spencernek a Puffin lekvár,
                 klienseinknek pedig a büfés finomságok adnak erőt és mindent lebíró akaratot!
             </p>
+            <div class="btn btn-secondary btn-table-call" onclick="document.getElementById('tbMod').style.display='block';document.getElementById('modalTable').style.display='block'">ÁRTÁBLÁZAT</div>
+            <div class="tableModal" id="tbMod">
+                <div class="atbleModalContent">
+                    <span class="close" onclick="document.getElementById('tbMod').style.display='none'">&times;</span>
+                    <table id="modalTable">
+                        <tr class="tr0">
+                           <th>Megnevezés</th>
+                           <th>Ár</th>
+                           <th>Tartalom</th>
+                           <th>Allegrének</th>
+                        </tr>
+                        <tr class="tr1">
+                            <th>Fehérjeturmixok</th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                        <tr class="tr2">
+                        
+                            <td>Epres ferhérjeturmix</td>
+                            <td>790 Ft</td>
+                            <td>Eper, Tej/Víz/Laktózm. Tej, Epres fehérjepor</td>
+                            <td>Tej, Eper</td>
+                        
+                        </tr>
+                        <tr class="tr2">
+                        
+                            <td>Vaníliás fehérjeturmix</td>
+                            <td>690 Ft</td>
+                            <td>Tej/Víz/Laktózm. Tej, Vaníliás fehérjepor</td>
+                            <td>Tej</td>
+                        
+                        </tr>
+                        <tr class="tr2">
+                        
+                            <td>Csokis fehérjeturmix</td>
+                            <td>740 Ft</td>
+                            <td>Ét-/ tejcsokoládé, Tej/Víz/Laktózm. Tej, Csokis fehérjepor</td>
+                            <td>Csokoládé, Tej</td>
+                        
+                        </tr>
+                        <tr class="tr2">
+                        
+                            <td>Mogyorós fehérjeturmix</td>
+                            <td>740 Ft</td>
+                            <td>Mogyoró, Tej/Víz/Laktózm. Tej, Mogyorós fehérjepor</td>
+                            <td>Mogyoró, Tej</td>
+                        
+                        </tr>
+                        <tr class="tr1">
+                            <th>Smoothie-k</th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                         </tr>
+                        <tr class="tr2">
+                        
+                            <td>Epres Csokis Banános smoothie</td>
+                            <td>1000 Ft</td>
+                            <td>Eper, Csoki, Banán, Tej/Víz/Laktózm. Tej</td>
+                            <td>Eper, Csoki, Banán, Tej/Víz/Laktózm. Tej</td>
+                        
+                        </tr>
+                        <tr class="tr2">
+                        
+                            <td>Epres Csokis smoothie</td>
+                            <td>950 Ft</td>
+                            <td>Eper, Csoki, Tej/Víz/Laktózm. Tej</td>
+                            <td>Eper, Csoki, Tej/Víz/Laktózm. Tej</td>
+                        
+                        </tr>
+                        <tr class="tr2">
+                        
+                            <td>Csokis Banános smoothie</td>
+                            <td>950 Ft</td>
+                            <td>Csoki, Banán, Tej/Víz/Laktózm. Tej</td>
+                            <td>Csoki, Banán, Tej/Víz/Laktózm. Tej</td>
+                        
+                        </tr>
+                        <tr class="tr2">
+                        
+                            <td>Epres Banános smoothie</td>
+                            <td>950 Ft</td>
+                            <td>Eper, Banán, Tej/Víz/Laktózm. Tej</td>
+                            <td>Eper, Banán, Tej/Víz/Laktózm. Tej</td>
+                        
+                        </tr>
+                        <tr class="tr2">
+                        
+                            <td>Epres smoothie</td>
+                            <td>790 Ft</td>
+                            <td>Eper, Tej/Víz/Laktózm. Tej</td>
+                            <td>Eper, Tej/Víz/Laktózm. Tej</td>
+                        
+                        </tr>
+                        <tr class="tr2">
+                        
+                            <td>Banános smoothie</td>
+                            <td>790 Ft</td>
+                            <td>Banán, Tej/Víz/Laktózm. Tej</td>
+                            <td>Banán, Tej/Víz/Laktózm. Tej</td>
+                        
+                        </tr>
+                        <tr class="tr2">
+                        
+                            <td>Csokis smoothie</td>
+                            <td>790 Ft</td>
+                            <td>Csoki, Tej/Víz/Laktózm. Tej</td>
+                            <td>Csoki, Tej/Víz/Laktózm. Tej</td>
+                        
+                        </tr>
+                    </table>
+                </div>
+            </div>
             <table id="table">
                 <tr class="tr0">
                    <th>Megnevezés</th>
