--- a/frontend/src/app/edzo/edzo.component.css
+++ b/frontend/src/app/edzo/edzo.component.css
@@ -157,3 +157,78 @@ footer {
     border-bottom-right-radius: 15px;
     grid-area: footer;
 }
+@media (max-width: 1000px){
+    #container{
+        width: 600px;
+
+    }
+    .middle{
+        align-items: center;
+        justify-items: top;
+    }
+    img{
+        margin-top: 5px;
+        width: 400px;
+    }
+}
+@media (max-width: 650px){
+    #container{
+        width: 300px;
+        margin: 75px;
+        align-content: center;
+    }
+    nav{
+        width: 110px;
+        font-weight: 200;
+    }
+    .tr1{
+        font-size: 16px;
+    }
+    .tr2{
+        font-size: 16px;
+        border-bottom: 1px solid #000;
+    }
+    img{
+        margin-right: 15px;
+        width: 300px;
+    }
+    .btn.btn-secondary{
+        font-size: 15px;
+        font-weight: 200;
+    }
+    .form-group{
+        width: 150px;
+        align-self: left;
+        align-items: left;
+        margin-right: 15px;
+    }
+}
+@media (max-width:500px){
+    #container{
+        width: 200px;
+        margin: 50px;
+    }
+    img{
+        width: 200px;
+    }
+    .tr1{
+        font-size: 10px;
+    }
+    .tr2{
+        font-size: 10px;
+        border-bottom: 1px solid #000;
+    }
+    nav ul li {    
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+    table{
+        font-size: 10px;
+        width: 150px;
+    }
+}
+@media (max-width:400px){
+    #container{
+        margin: 25px;
+    }
+}
