--- a/frontend/src/app/fooldal/fooldal.component.html
+++ b/frontend/src/app/fooldal/fooldal.component.html
@@ -19,32 +19,32 @@
         
         <article class="content">
             <h1 class="middle">Szolgáltatásaink</h1>
-                <div class="picflow_1">
+                <div class="picflow picflow_1">
                     <a routerLink="/berlet-component" title="Kattints a képre a további tudnivalókért!" routerLinkActive="active"><img class="thumbnail"
                     src="../../assets/images/1.jpg" alt="kép1"></a>
                     <p class="caption">Havi bérlet</p>
                 </div>
-                <div class="picflow_2">
+                <div class="picflow picflow_2">
                     <a routerLink="/edzo-component" title="Kattints a képre a további tudnivalókért!" routerLinkActive="active"><img class="thumbnail"
                     src="../../assets/images/2.jpg" alt="kép2"></a>
                     <p class="caption">Személyi edzőpartner</p>
                 </div>
-                <div class="picflow_3">
+                <div class="picflow picflow_3">
                     <a routerLink="/felszereles-component" title="Kattints a képre a további tudnivalókért!" routerLinkActive="active"><img class="thumbnail"
                     src="../../assets/images/3.jpg" alt="kép3"></a>
                     <p class="caption">Felszerelésünk</p>
                 </div>
-                <div class="picflow_4">
+                <div class="picflow picflow_4">
                     <a routerLink="/bufe-component" title="Kattints a képre a további tudnivalókért!" routerLinkActive="active"><img class="thumbnail"
                     src="../../assets/images/4.jpg" alt="kép4"></a>
                     <p class="caption">Büfé</p>
                 </div>
-                <div class="picflow_5">
+                <div class="picflow picflow_5">
                     <a routerLink="/termek-component" title="Kattints a képre a további tudnivalókért!" routerLinkActive="active"><img class="thumbnail"
                     src="../../assets/images/5.jpg" alt="kép5"></a>
                     <p class="caption">Étrendkiegészítőink</p>
                 </div>
-                <div class="picflow_6">
+                <div class="picflow picflow_6">
                     <a routerLink="/karrier-component" title="Kattints a képre a további tudnivalókért!" routerLinkActive="active"><img class="thumbnail"
                     src="../../assets/images/6.jpg" alt="kép6"></a>
                     <p class="caption">Karrier</p>
