--- a/frontend/src/app/karrier/karrier.component.html
+++ b/frontend/src/app/karrier/karrier.component.html
@@ -41,13 +41,27 @@
             <div class="middle">
                 <a><img src="../../assets/images/6.jpg" alt="5. kép"></a>
                 <h2>Vedd fel velünk a kapcsolatot:</h2>
-                <table>
+                <table id="table">
                     <tr class="tr tr1">
                         <th >Tel.:</th>
                         <th>E-mail</th>
                     </tr>
-                    <tr>
+                    <tr class="tr tr2"> 
                         <td>06 55 442 2331</td>
+                        <td>karrier.lof@lofgym.hu</td>
+                    </tr>
+                </table>
+                <table class="smallTable">
+                    <tr class="tr tr1">
+                        <th >Tel.:</th>
+                    </tr>
+                    <tr class="tr tr2"> 
+                        <td>06 55 442 2331</td>
+                    </tr>
+                    <tr>
+                        <th>E-mail</th>
+                    </tr>
+                    <tr>
                         <td>karrier.lof@lofgym.hu</td>
                     </tr>
                 </table>
