--- a/frontend/src/app/felszereles/felszereles.component.css
+++ b/frontend/src/app/felszereles/felszereles.component.css
@@ -156,3 +156,65 @@ footer {
     border-bottom-right-radius: 15px;
     grid-area: footer;
 }
+@media (max-width: 1000px){
+    #container{
+        width: 600px;
+
+    }
+    .middle{
+        align-items: center;
+        justify-items: top;
+    }
+    img{
+        margin-top: 5px;
+        width: 400px;
+    }
+}
+@media (max-width: 650px){
+    #container{
+        width: 300px;
+        margin: 75px;
+        align-content: center;
+    }
+    nav{
+        width: 110px;
+        font-weight: 200;
+    }
+    img{
+        margin-right: 15px;
+        width: 300px;
+    }
+    .btn.btn-secondary{
+        font-size: 16px;
+        font-weight: 200;
+    }
+    .form-group{
+        width: 150px;
+        align-self: left;
+        align-items: left;
+        margin-right: 15px;
+    }
+}
+@media (max-width:500px){
+    #container{
+        width: 200px;
+        margin: 50px;
+    }
+    nav{
+        width: 90px;
+    }
+    .btn.btn-secondary{
+        font-size: 11px;
+    }
+    img{
+        width: 180px;
+    }
+    table{
+        width: 100px;
+    }
+}
+@media (max-width:400px){
+    #container{
+        margin: 25px;
+    }
+}
