--- a/frontend/src/app/fooldal/fooldal.component.css
+++ b/frontend/src/app/fooldal/fooldal.component.css
@@ -22,6 +22,12 @@ header{
     place-content: center;
     place-items: center;
 }
+.logo{
+    width: 70px;
+    bottom: 5px;
+    grid-area: logo;
+    place-content: center;
+}
 h3{
     grid-area: h3;
 }
@@ -35,24 +41,19 @@ nav ul li {
     padding-top: 20px;
     padding-bottom: 20px;
 }
-.logo{
-    width: 70px;
-    bottom: 5px;
-    grid-area: logo;
-    place-content: center;
-}
-.caption{    
-    width: 200px;    
-    background-color: black;
-    color: white;
-    font-style: italic;
-    text-align: center;
-    border-bottom-left-radius: 3px;
-    border-bottom-right-radius: 3px;
-    grid-area: caption;
-}
-.description{
-    margin: 15px;
+#container{
+    position: relative;
+    width:1000px;      
+    margin: auto;  
+    margin-bottom: 30px;
+    display: grid;
+    grid-template-columns: 2;
+    grid-template-rows: 3;
+    grid-template-areas: 
+    "header header"
+    "nav content"
+    "footer footer";
+        
 }
 article {
     float: left;
@@ -71,6 +72,19 @@ article {
     "picflow_4 picflow_5 picflow_6"
     "click click click";
 }
+
+.caption{    
+    width: 200px;    
+    background-color: black;
+    color: white;
+    font-style: italic;
+    text-align: center;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    grid-area: caption;
+}
+
+
 .middle{
     padding-top: 30px;
     text-align: center;
@@ -168,20 +182,7 @@ article {
     top:0;
     z-index:-1;
 }
-#container{
-    position: relative;
-    width:1000px;      
-    margin: auto;  
-    margin-bottom: 30px;
-    display: grid;
-    grid-template-columns: 2;
-    grid-template-rows: 3;
-    grid-template-areas: 
-    "header header"
-    "nav content"
-    "footer footer";
-        
-}
+
 nav {
     width: 150px;
     height: 650px;
@@ -207,4 +208,50 @@ footer {
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     grid-area: footer;
+}
+@media(max-width:1000px){
+    #container{
+        width: 600px;
+    }
+    article{
+        padding: 5px;
+        gap: 10px;
+    }
+    .thumbnail{
+        width: 200px;
+        margin-left: 1px;      
+        margin-right: 1px;  
+        grid-area: thumbnail;    
+    }
+}
+@media (max-width:650px){
+    article{
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto auto auto auto;
+        grid-template-areas: 
+        "middle middle"
+        "picflow_1 picflow_2"
+        "picflow_3 picflow_4"
+        "picflow_5 picflow_6"
+        "click click";
+        gap: 20px;
+    }
+    .middle{
+        font-size: 28px;
+        width: 150px;
+    }
+    #container{
+        width: 300px;
+        margin: 75px;
+    }
+    nav{
+        width: 110px;
+        font-weight: 200;
+    }
+    .thumbnail{
+        width: 170px;
+        margin-left: 1px;      
+        margin-right: 1px;  
+        grid-area: thumbnail;    
+    }
 }
