--- a/frontend/src/app/karrier/karrier.component.css
+++ b/frontend/src/app/karrier/karrier.component.css
@@ -86,6 +86,9 @@ h3{
     margin-right: 10px;
     margin-bottom: 20px;
 }
+.smallTable{
+    display: none;
+}
 .tr1{
     background-color: #000;
     font-style: normal;
@@ -122,4 +125,86 @@ footer {
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     grid-area: footer;
+}
+@media (max-width: 1000px){
+    #container{
+        width: 600px;
+
+    }
+    .middle{
+        align-items: center;
+        justify-items: top;
+    }
+    img{
+        margin-top: 5px;
+        width: 400px;
+    }
+}
+@media (max-width: 650px){
+    #container{
+        width: 300px;
+        margin: 75px;
+        align-content: center;
+    }
+    nav{
+        width: 110px;
+        font-weight: 200;
+    }
+    img{
+        margin-right: 15px;
+        width: 300px;
+    }
+    .btn.btn-secondary{
+        font-size: 16px;
+        font-weight: 200;
+    }
+    .form-group{
+        width: 150px;
+        align-self: left;
+        align-items: left;
+        margin-right: 15px;
+    }
+}
+@media (max-width:500px){
+    #container{
+        width: 200px;
+        margin: 50px;
+    }
+    nav{
+        width: 90px;
+    }
+    h2{
+        font-size: 18px;
+    }
+    nav ul li {    
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+    .btn.btn-secondary{
+        font-size: 11px;
+    }
+    .tr{
+        width: 200px;
+    }
+    .tr1{
+        font-size: 16px;
+    }
+    .tr2{
+        font-size: 14px;
+    }
+    img{
+        width: 180px;
+    }
+    #table{
+        display: none;
+    }
+    .smallTable{
+        width: 200px;
+        display: block;
+    }
+}
+@media (max-width:400px){
+    #container{
+        margin: 25px;
+    }
 }
