--- a/frontend/src/app/berlet/berlet.component.html
+++ b/frontend/src/app/berlet/berlet.component.html
@@ -51,19 +51,29 @@
                         <td class="btn btn-rendel"  onclick="document.getElementById('myModal').style.display='block'" id="rendel">{{berlet.berlet_tipus}}</td>
                         <td>{{berlet.berlet_ar}} Ft</td>
                     </tr>
-                     <div class="modal" id="myModal">
-                    <div class="modal-content">
-                        <span class="close" onclick="document.getElementById('myModal').style.display='none'">&times;</span>
-                        <div class="form-group">
-                            <label >Mennyiség</label>
-                            <input type="number" class="form-control" id="mennyiseg">
-                            <label >Szállítási cím</label>
-                            <input type="text" class="form-control" id="szall-cim">
+                    <div class="modal" id="myModal">
+                        <div class="modal-content">
+                            <span class="close" onclick="document.getElementById('myModal').style.display='none'">&times;</span>
+                            <h5>Bérlet vásárlás</h5>
+                            <div class="form-group">
+                                <label>Bérlettípus</label>
+                                <input type="number" ngModel name="berlet_vasarlasID" class="form-control" id="berlettipus" min="1"
+                                    max="4">
+                                <small class="form-row form-text text-muted">#1-Diák, #2-Felnőtt, #3-Nyugdíjas,
+                                    #4-Csecsemő</small>
+                                <label>Megjegyzes</label>
+                                <textarea maxlength="50" ngModel name="berlet_vasarlasID" id="megjegyzes"
+                                    placeholder="Opcionális max(50)" style="width:absolute;"></textarea>
+                                <label>FelhasznaloID</label>
+                                <input type="number" ngModel name="felhasznaloID" class="form-control" id="felhID" min="1">
+                
+                            </div>
+                            <div class="btn btn-secondary btn-block"
+                                onclick="document.getElementById('myModal').style.display='none';let input = document.getElementById('mennyiseg').value;alert(input) ">
+                                Megrendelem</div>
                         </div>
-                        <div class="btn btn-secondary btn-block" onclick="document.getElementById('myModal').style.display='none';let input = document.getElementById('mennyiseg').value;alert(input) ">Megrendelem</div>
+                
                     </div>
-                    
-                </div>
                 </table>
             </div>
             
