--- a/frontend/src/app/berlet/berlet.component.html
+++ b/frontend/src/app/berlet/berlet.component.html
@@ -69,7 +69,7 @@
                 
                             </div>
                             <div class="btn btn-secondary btn-block"
-                                onclick="document.getElementById('myModal').style.display='none';let input = document.getElementById('mennyiseg').value;alert(input) ">
+                                onclick="document.getElementById('myModal').style.display='none' ">
                                 Megrendelem</div>
                         </div>
                 
